fix header nav spacing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,8 @@
     white 60%
   );
   --width: 1000px;
+  --color: #202124;
+  --bg: #f5f5f5;
 }
 
 @media (prefers-color-scheme: dark) {
